# qtchat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: chatmessage.h  chatmessageeditdialog.h  chatmessagehistory.h  chatwindow.h  configuration.h  connectiondialog.h  encryption.h  mainwindow.h  messaging.h  network.h  session.h  settingswindow.h  utils.h
lib/cryptopp/: CMakeLists.txt  pem_common.cpp  pem_read.cpp  pem_test.cxx  pem_write.cpp  x509cert.cpp
src/: chatmessage.cpp  chatmessage.ui  chatmessageeditdialog.cpp  chatmessageeditdialog.ui  chatmessagehistory.cpp  chatmessagehistory.ui  chatwindow.cpp  chatwindow.ui  configuration.cpp  connectiondialog.cpp  connectiondialog.ui  encryption.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  messaging.cpp  network.cpp  session.cpp  settingswindow.cpp  settingswindow.ui  utils.cpp
